# first_ai_agent

./: .gitignore  README.md  main.py  pyproject.toml
app/agent/: graph.py  state.py
app/agent/nodes/: allowed_sofrware.py  chatbots.py  clarification.py  error.py  generate_html.py  normalize_query.py  resolve_software.py  router.py  test.py  web_search.py
app/bot/: handlers.py
data/: allowed_software.yaml
models/: models.py  schemas.py
notebooks/: firsr_bone.ipynb  langgraph_course.ipynb  test.ipynb
prompts/: html_prompt.txt  validation_prompt.txt
scripts/: agent_four.py  chatbot.py  rag_agent.py  task_2.py
